# ga-combined-routing-loading

./: README.md  cli.py  export.py  genetic_algorithm.py  loaders.py  main.py  package.py  pyproject.toml  simulation.py  truck.py
.github/workflows/: daily-run.yml
data/: default_package_list.csv  distances.csv  ga_results.json  locations.csv
tests/: test_bundling.py
